# francium-mlibc

./: meson.build
abis/francium/: auxv.h
options/posix/generic/: pthread-stubs.cpp
options/rtdl/generic/: linker.cpp
sysdeps/francium/: meson.build
sysdeps/francium/aarch64/: thread-entry.S
sysdeps/francium/aarch64/crt-src/: Scrt1.S
sysdeps/francium/generic/: entry.cpp  files.cpp  memory.cpp  misc.cpp  stub.cpp  syscall.h  thread.cpp
sysdeps/francium/include/abi-bits/: auxv.h
sysdeps/francium/x86_64/: thread-entry.S  x86_64_syscalls.s
sysdeps/managarm/generic/: file.cpp
